devsecops/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-demo
  labels:
    # PSA: baseline permite contenedores sin root forzado
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
